@@ -1,3 +1,10 @@
+2001-10-13  Andrew Cagney  <ac131313@redhat.com>
+
+	From 2001-07-09 D.J. Barrow <djbarrow@de.ibm.com>:
+        * gdbarch.sh: Fixed CALL_DUMMY_BREAKPOINT_OFFSET to check
+	CALL_DUMMY_BREAKPOINT_OFFSET_P.
+	* gdbarch.c: Regenerate.
+	
 2001-10-12  Christopher Faylor  <cgf@redhat.com>
 
 	* win32-nat.c (safe_symbol_file_add_stub): Properly initialize linked
